Changed directory for code

--- a/Waterfall/POR/POR.ipynb
+++ b/Waterfall/POR/POR.ipynb
@@ -19,8 +19,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T02:01:50.515100Z",
-     "start_time": "2020-04-27T02:01:44.832835Z"
+     "end_time": "2020-05-18T07:58:59.383140Z",
+     "start_time": "2020-05-18T07:58:48.672446Z"
     }
    },
    "outputs": [],
@@ -40,13 +40,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T16:57:26.691001Z",
-     "start_time": "2020-04-24T16:57:26.677037Z"
+     "end_time": "2020-05-18T07:59:01.593751Z",
+     "start_time": "2020-05-18T07:59:01.585316Z"
     }
    },
    "outputs": [],
    "source": [
-    "path = r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\Waterfall\\Automation\\POR Transpose'\n",
+    "path = r'C:\\Users\\KohMansf\\Documents\\STAMS\\Waterfall\\POR Transpose'\n",
     "os.chdir(path)\n",
     "files = glob.glob(path + '/*.xlsb')\n",
     "\n",
@@ -58,8 +58,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T16:57:33.064326Z",
-     "start_time": "2020-04-24T16:57:26.696983Z"
+     "end_time": "2020-05-18T07:59:07.734348Z",
+     "start_time": "2020-05-18T07:59:02.623965Z"
     }
    },
    "outputs": [],
@@ -78,8 +78,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T16:57:33.165066Z",
-     "start_time": "2020-04-24T16:57:33.072307Z"
+     "end_time": "2020-05-18T07:59:12.276472Z",
+     "start_time": "2020-05-18T07:59:12.211952Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T16:57:33.179020Z",
-     "start_time": "2020-04-24T16:57:33.173036Z"
+     "end_time": "2020-05-18T07:59:25.811694Z",
+     "start_time": "2020-05-18T07:59:25.807230Z"
     }
    },
    "outputs": [],
@@ -107,8 +107,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T16:57:33.322638Z",
-     "start_time": "2020-04-24T16:57:33.185004Z"
+     "end_time": "2020-05-18T07:59:26.439981Z",
+     "start_time": "2020-05-18T07:59:26.381950Z"
     }
    },
    "outputs": [],
@@ -122,8 +122,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T16:57:34.181637Z",
-     "start_time": "2020-04-24T16:57:33.326635Z"
+     "end_time": "2020-05-18T07:59:33.224981Z",
+     "start_time": "2020-05-18T07:59:32.657494Z"
     }
    },
    "outputs": [],
@@ -141,8 +141,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T16:57:34.224511Z",
-     "start_time": "2020-04-24T16:57:34.186613Z"
+     "end_time": "2020-05-18T07:59:34.931243Z",
+     "start_time": "2020-05-18T07:59:34.903947Z"
     }
    },
    "outputs": [],
@@ -155,8 +155,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T16:57:47.912564Z",
-     "start_time": "2020-04-24T16:57:47.888628Z"
+     "end_time": "2020-05-18T07:59:39.512643Z",
+     "start_time": "2020-05-18T07:59:39.499250Z"
     }
    },
    "outputs": [],
@@ -169,8 +169,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T16:57:49.646744Z",
-     "start_time": "2020-04-24T16:57:49.641757Z"
+     "end_time": "2020-05-18T07:59:48.882895Z",
+     "start_time": "2020-05-18T07:59:48.877937Z"
     }
    },
    "outputs": [],
@@ -185,13 +185,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T16:58:00.469030Z",
-     "start_time": "2020-04-24T16:57:58.564650Z"
+     "end_time": "2020-05-18T08:00:25.654960Z",
+     "start_time": "2020-05-18T08:00:24.161508Z"
     }
    },
    "outputs": [],
    "source": [
-    "database_path = r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\Waterfall\\Automation\\Database\\POR'\n",
+    "database_path = r'C:\\Users\\KohMansf\\Documents\\STAMS\\Waterfall\\Database\\POR'\n",
     "os.chdir(database_path)\n",
     "latest_por.to_csv(file, index=False)"
    ]
@@ -208,8 +208,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T17:01:11.642392Z",
-     "start_time": "2020-04-24T17:01:11.638403Z"
+     "end_time": "2020-05-18T08:00:37.171867Z",
+     "start_time": "2020-05-18T08:00:37.168392Z"
     }
    },
    "outputs": [],
@@ -223,8 +223,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T17:01:12.434691Z",
-     "start_time": "2020-04-24T17:01:12.428707Z"
+     "end_time": "2020-05-18T08:00:48.558538Z",
+     "start_time": "2020-05-18T08:00:48.554073Z"
     }
    },
    "outputs": [],
@@ -238,8 +238,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T17:01:26.634596Z",
-     "start_time": "2020-04-24T17:01:20.724240Z"
+     "end_time": "2020-05-18T08:00:57.511758Z",
+     "start_time": "2020-05-18T08:00:52.727847Z"
     }
    },
    "outputs": [],
@@ -258,8 +258,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T17:12:35.861066Z",
-     "start_time": "2020-04-24T17:12:13.661733Z"
+     "end_time": "2020-05-18T08:01:24.713850Z",
+     "start_time": "2020-05-18T08:01:08.418295Z"
     }
    },
    "outputs": [],
@@ -287,14 +287,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T02:01:56.184496Z",
-     "start_time": "2020-04-27T02:01:55.853818Z"
+     "end_time": "2020-05-18T08:02:33.314813Z",
+     "start_time": "2020-05-18T08:02:33.050447Z"
     }
    },
    "outputs": [],
    "source": [
     "df_region = pd.read_excel(\n",
-    "    r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\Waterfall\\Previous DB\\Country of Target Location\\Country of Target Location.xlsx',\n",
+    "    r'C:\\Users\\KohMansf\\Documents\\STAMS\\Waterfall\\Database\\Country of Target Location\\Country of Target Location.xlsx',\n",
     "    sheet_name='Country of Target Location',\n",
     "    na_filter=False,\n",
     "    usecols='A:B')"
@@ -305,8 +305,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T17:13:05.255842Z",
-     "start_time": "2020-04-24T17:13:03.073911Z"
+     "end_time": "2020-05-18T08:02:36.511941Z",
+     "start_time": "2020-05-18T08:02:35.069081Z"
     }
    },
    "outputs": [],
@@ -322,8 +322,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T17:13:05.269804Z",
-     "start_time": "2020-04-24T17:13:05.260828Z"
+     "end_time": "2020-05-18T08:02:39.345485Z",
+     "start_time": "2020-05-18T08:02:39.340526Z"
     }
    },
    "outputs": [],
@@ -350,8 +350,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T17:13:27.944732Z",
-     "start_time": "2020-04-24T17:13:27.219673Z"
+     "end_time": "2020-05-18T08:02:41.973712Z",
+     "start_time": "2020-05-18T08:02:41.599184Z"
     }
    },
    "outputs": [],
@@ -365,8 +365,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T17:13:47.182539Z",
-     "start_time": "2020-04-24T17:13:46.482069Z"
+     "end_time": "2020-05-18T08:02:45.539187Z",
+     "start_time": "2020-05-18T08:02:44.944484Z"
     }
    },
    "outputs": [],
@@ -384,8 +384,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T17:13:58.905602Z",
-     "start_time": "2020-04-24T17:13:58.577433Z"
+     "end_time": "2020-05-18T08:02:52.171700Z",
+     "start_time": "2020-05-18T08:02:51.811604Z"
     }
    },
    "outputs": [],
@@ -417,8 +417,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T17:15:31.869221Z",
-     "start_time": "2020-04-24T17:15:31.864233Z"
+     "end_time": "2020-05-18T08:03:18.031547Z",
+     "start_time": "2020-05-18T08:03:18.027583Z"
     }
    },
    "outputs": [],
@@ -431,8 +431,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-24T17:16:04.250080Z",
-     "start_time": "2020-04-24T17:15:37.226009Z"
+     "end_time": "2020-05-18T08:03:41.017319Z",
+     "start_time": "2020-05-18T08:03:20.595612Z"
     }
    },
    "outputs": [],
@@ -459,8 +459,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:50:23.242490Z",
-     "start_time": "2020-04-23T06:50:23.238500Z"
+     "end_time": "2020-05-18T08:04:08.650249Z",
+     "start_time": "2020-05-18T08:04:08.646775Z"
     }
    },
    "outputs": [],
@@ -473,8 +473,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:30:52.854789Z",
-     "start_time": "2020-04-23T06:30:51.971895Z"
+     "end_time": "2020-05-18T08:04:31.104743Z",
+     "start_time": "2020-05-18T08:04:30.281152Z"
     }
    },
    "outputs": [],
@@ -495,8 +495,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T06:42:34.365808Z",
-     "start_time": "2020-04-23T06:32:26.598298Z"
+     "end_time": "2020-05-18T08:06:18.728602Z",
+     "start_time": "2020-05-18T08:04:36.224359Z"
     }
    },
    "outputs": [],
@@ -523,6 +523,13 @@
     "print(df_final_por.head())\n",
     "print(df_final_por.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
