--- a/Waterfall/SHIPMENT/Phoenix_Shipment.ipynb
+++ b/Waterfall/SHIPMENT/Phoenix_Shipment.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:04:53.399355Z",
-     "start_time": "2020-04-27T07:04:52.124695Z"
+     "end_time": "2020-05-18T08:28:08.168126Z",
+     "start_time": "2020-05-18T08:28:07.165389Z"
     }
    },
    "outputs": [],
@@ -38,8 +38,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:56:08.827523Z",
-     "start_time": "2020-04-27T06:56:08.820544Z"
+     "end_time": "2020-05-18T08:28:08.175248Z",
+     "start_time": "2020-05-18T08:28:08.170784Z"
     }
    },
    "outputs": [],
@@ -53,14 +53,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:09.454241Z",
-     "start_time": "2020-04-27T06:56:09.342801Z"
+     "end_time": "2020-05-18T08:32:39.462181Z",
+     "start_time": "2020-05-18T08:31:46.048832Z"
     }
    },
    "outputs": [],
    "source": [
     "phoenix = pd.read_csv('v_Output_Lite.csv',\n",
-    "                      encoding=\"ISO-8859-1\", index_col='DATA_ELEMENT')"
+    "                      encoding=\"ISO-8859-1\", index_col='DATA_ELEMENT', low_memory=False)"
    ]
   },
   {
@@ -68,8 +68,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:12.887698Z",
-     "start_time": "2020-04-27T06:57:12.781981Z"
+     "end_time": "2020-05-18T08:31:27.568149Z",
+     "start_time": "2020-05-18T08:31:27.534422Z"
     }
    },
    "outputs": [],
@@ -89,8 +89,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:16.701313Z",
-     "start_time": "2020-04-27T06:57:16.370916Z"
+     "end_time": "2020-05-18T08:32:40.049445Z",
+     "start_time": "2020-05-18T08:32:39.471606Z"
     }
    },
    "outputs": [],
@@ -104,8 +104,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:17.431412Z",
-     "start_time": "2020-04-27T06:57:17.411465Z"
+     "end_time": "2020-05-18T08:33:47.714217Z",
+     "start_time": "2020-05-18T08:33:47.696855Z"
     }
    },
    "outputs": [],
@@ -118,8 +118,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:26.720738Z",
-     "start_time": "2020-04-27T06:57:26.611514Z"
+     "end_time": "2020-05-18T08:33:51.717678Z",
+     "start_time": "2020-05-18T08:33:51.612201Z"
     }
    },
    "outputs": [],
@@ -133,8 +133,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:28.540131Z",
-     "start_time": "2020-04-27T06:57:28.522178Z"
+     "end_time": "2020-05-18T08:33:52.365679Z",
+     "start_time": "2020-05-18T08:33:52.347827Z"
     }
    },
    "outputs": [],
@@ -147,8 +147,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:29.413493Z",
-     "start_time": "2020-04-27T06:57:29.386567Z"
+     "end_time": "2020-05-18T08:33:53.459948Z",
+     "start_time": "2020-05-18T08:33:53.431180Z"
     }
    },
    "outputs": [],
@@ -161,8 +161,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:32.208947Z",
-     "start_time": "2020-04-27T06:57:32.090933Z"
+     "end_time": "2020-05-18T08:33:59.531326Z",
+     "start_time": "2020-05-18T08:33:59.409217Z"
     }
    },
    "outputs": [],
@@ -182,8 +182,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:32.543133Z",
-     "start_time": "2020-04-27T06:57:32.533155Z"
+     "end_time": "2020-05-18T08:34:00.114500Z",
+     "start_time": "2020-05-18T08:34:00.099620Z"
     }
    },
    "outputs": [],
@@ -196,8 +196,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:39.070195Z",
-     "start_time": "2020-04-27T06:57:32.981075Z"
+     "end_time": "2020-05-18T08:34:16.731875Z",
+     "start_time": "2020-05-18T08:34:00.526553Z"
     }
    },
    "outputs": [],
@@ -211,8 +211,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:39.148947Z",
-     "start_time": "2020-04-27T06:57:39.073123Z"
+     "end_time": "2020-05-18T08:35:07.364694Z",
+     "start_time": "2020-05-18T08:35:07.224907Z"
     }
    },
    "outputs": [],
@@ -228,8 +228,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:39.184824Z",
-     "start_time": "2020-04-27T06:57:39.152909Z"
+     "end_time": "2020-05-18T08:35:08.155677Z",
+     "start_time": "2020-05-18T08:35:08.123935Z"
     }
    },
    "outputs": [],
@@ -242,15 +242,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:48.834391Z",
-     "start_time": "2020-04-27T06:57:48.674676Z"
+     "end_time": "2020-05-18T08:35:13.484571Z",
+     "start_time": "2020-05-18T08:35:13.133403Z"
     }
    },
    "outputs": [],
    "source": [
     "phoenix_filter['YYYYWW'] = phoenix_filter['CAL_DAY_DT'].apply(lambda x: str(x.isocalendar()[0]) +\n",
     "                                                              str(x.isocalendar()[1] - 1).zfill(2))\n",
-    "phoenix_filter['QtyType'] = 'SHIP'"
+    "phoenix_filter['QtyType'] = 'SHIP'\n",
+    "\n",
+    "phoenix_filter = phoenix_filter.loc[phoenix_filter['#BUILD_ACTUAL_QT'] != 0]"
    ]
   },
   {
@@ -258,14 +260,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:57:49.508043Z",
-     "start_time": "2020-04-27T06:57:49.474132Z"
+     "end_time": "2020-05-18T08:45:00.711759Z",
+     "start_time": "2020-05-18T08:45:00.695888Z"
     },
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "phoenix_filter"
+    "phoenix_filter.head()"
    ]
   },
   {
@@ -273,8 +275,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T06:58:07.212380Z",
-     "start_time": "2020-04-27T06:58:07.204406Z"
+     "end_time": "2020-05-18T08:35:22.088605Z",
+     "start_time": "2020-05-18T08:35:22.079679Z"
     }
    },
    "outputs": [],
@@ -287,13 +289,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:00:03.784432Z",
-     "start_time": "2020-04-27T07:00:03.779445Z"
+     "end_time": "2020-05-18T08:37:43.418570Z",
+     "start_time": "2020-05-18T08:37:43.414601Z"
     }
    },
    "outputs": [],
    "source": [
-    "shipment_path = r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\Waterfall\\Automation\\Database\\SHIPMENT'\n",
+    "shipment_path = r'C:\\Users\\KohMansf\\Documents\\STAMS\\Waterfall\\Database\\SHIPMENT'\n",
     "os.chdir(shipment_path)"
    ]
   },
@@ -302,8 +304,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:00:10.339882Z",
-     "start_time": "2020-04-27T07:00:06.937750Z"
+     "end_time": "2020-05-18T08:37:50.250557Z",
+     "start_time": "2020-05-18T08:37:47.357717Z"
     }
    },
    "outputs": [],
@@ -311,6 +313,20 @@
     "shipment_read = pd.read_csv('Shipment Data.csv')\n",
     "\n",
     "shipment_read['CAL_DAY_DT'] = shipment_read['CAL_DAY_DT'].apply(pd.to_datetime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-18T08:38:59.505361Z",
+     "start_time": "2020-05-18T08:38:59.469649Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "shipment_read"
    ]
   },
   {
@@ -325,8 +341,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-27T07:00:10.350788Z",
-     "start_time": "2020-04-27T07:00:10.342811Z"
+     "end_time": "2020-05-18T08:38:12.937402Z",
+     "start_time": "2020-05-18T08:38:12.931450Z"
     }
    },
    "outputs": [],
@@ -387,7 +403,7 @@
    "outputs": [],
    "source": [
     "shipment_df = pd.read_csv('Shipment Data.csv')\n",
-    "col = ['Platform','SKU','Region','MPA','DATES','Qty','YYYYWW','QtyType']\n",
+    "col = ['Platform', 'SKU', 'Region', 'MPA', 'DATES', 'Qty', 'YYYYWW', 'QtyType']\n",
     "shipment_df.columns = col\n",
     "shipment_df.to_sql(table_name,\n",
     "                   engine,\n",
