--- a/Waterfall/FINALSHIPVPOR/FinalShipVPOR.ipynb
+++ b/Waterfall/FINALSHIPVPOR/FinalShipVPOR.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:11:43.625617Z",
-     "start_time": "2020-04-23T13:11:42.127786Z"
+     "end_time": "2020-05-18T08:54:56.516536Z",
+     "start_time": "2020-05-18T08:54:55.137053Z"
     }
    },
    "outputs": [],
@@ -31,13 +31,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:11:43.635272Z",
-     "start_time": "2020-04-23T13:11:43.628298Z"
+     "end_time": "2020-05-18T08:54:57.041800Z",
+     "start_time": "2020-05-18T08:54:57.037833Z"
     }
    },
    "outputs": [],
    "source": [
-    "path = r'C:\\Users\\KohMansf\\Documents\\STAMS_FILES\\Waterfall\\Automation\\Database\\FULLSHIPVPOR'\n",
+    "path = r'C:\\Users\\KohMansf\\Documents\\STAMS\\Waterfall\\Database\\FULLSHIPVPOR'\n",
     "os.chdir(path)"
    ]
   },
@@ -60,8 +60,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:11:48.079972Z",
-     "start_time": "2020-04-23T13:11:45.165662Z"
+     "end_time": "2020-05-18T08:55:00.841000Z",
+     "start_time": "2020-05-18T08:54:59.388056Z"
     }
    },
    "outputs": [],
@@ -86,8 +86,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:15:20.845663Z",
-     "start_time": "2020-04-23T13:11:50.038754Z"
+     "end_time": "2020-05-18T08:57:09.287222Z",
+     "start_time": "2020-05-18T08:55:04.534656Z"
     }
    },
    "outputs": [],
@@ -111,8 +111,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:15:23.980115Z",
-     "start_time": "2020-04-23T13:15:23.943207Z"
+     "end_time": "2020-05-18T08:58:01.467270Z",
+     "start_time": "2020-05-18T08:58:01.437012Z"
     }
    },
    "outputs": [],
@@ -125,8 +125,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:15:25.297971Z",
-     "start_time": "2020-04-23T13:15:24.766394Z"
+     "end_time": "2020-05-18T08:58:05.213688Z",
+     "start_time": "2020-05-18T08:58:04.628915Z"
     }
    },
    "outputs": [],
@@ -151,8 +151,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:15:31.752984Z",
-     "start_time": "2020-04-23T13:15:30.069775Z"
+     "end_time": "2020-05-18T08:58:08.234404Z",
+     "start_time": "2020-05-18T08:58:07.492480Z"
     }
    },
    "outputs": [],
@@ -178,8 +178,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:15:34.508888Z",
-     "start_time": "2020-04-23T13:15:32.582710Z"
+     "end_time": "2020-05-18T08:58:12.204357Z",
+     "start_time": "2020-05-18T08:58:11.541187Z"
     }
    },
    "outputs": [],
@@ -198,8 +198,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:15:35.034275Z",
-     "start_time": "2020-04-23T13:15:34.949168Z"
+     "end_time": "2020-05-18T08:58:14.343238Z",
+     "start_time": "2020-05-18T08:58:14.258423Z"
     }
    },
    "outputs": [],
@@ -213,8 +213,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:15:35.354785Z",
-     "start_time": "2020-04-23T13:15:35.336826Z"
+     "end_time": "2020-05-18T08:58:14.917774Z",
+     "start_time": "2020-05-18T08:58:14.901902Z"
     }
    },
    "outputs": [],
@@ -227,8 +227,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:15:37.640022Z",
-     "start_time": "2020-04-23T13:15:37.634034Z"
+     "end_time": "2020-05-18T08:58:16.773056Z",
+     "start_time": "2020-05-18T08:58:16.768592Z"
     }
    },
    "outputs": [],
@@ -242,8 +242,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:15:57.499424Z",
-     "start_time": "2020-04-23T13:15:38.174296Z"
+     "end_time": "2020-05-18T08:58:40.059024Z",
+     "start_time": "2020-05-18T08:58:17.193637Z"
     }
    },
    "outputs": [],
@@ -262,8 +262,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:16:02.431832Z",
-     "start_time": "2020-04-23T13:16:01.582990Z"
+     "end_time": "2020-05-18T08:58:47.392063Z",
+     "start_time": "2020-05-18T08:58:46.104455Z"
     }
    },
    "outputs": [],
@@ -278,8 +278,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:16:03.519570Z",
-     "start_time": "2020-04-23T13:16:03.278597Z"
+     "end_time": "2020-05-18T08:58:48.701250Z",
+     "start_time": "2020-05-18T08:58:48.392238Z"
     }
    },
    "outputs": [],
@@ -296,8 +296,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:16:12.608051Z",
-     "start_time": "2020-04-23T13:16:08.070216Z"
+     "end_time": "2020-05-18T08:59:00.729063Z",
+     "start_time": "2020-05-18T08:58:55.824658Z"
     }
    },
    "outputs": [],
@@ -311,8 +311,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T07:45:54.239435Z",
-     "start_time": "2020-04-23T07:45:54.234449Z"
+     "end_time": "2020-05-18T08:59:02.442007Z",
+     "start_time": "2020-05-18T08:59:02.437543Z"
     }
    },
    "outputs": [],
@@ -339,8 +339,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T07:45:57.635498Z",
-     "start_time": "2020-04-23T07:45:55.802365Z"
+     "end_time": "2020-05-18T08:59:06.830092Z",
+     "start_time": "2020-05-18T08:59:04.619937Z"
     }
    },
    "outputs": [],
@@ -361,8 +361,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T07:53:08.859610Z",
-     "start_time": "2020-04-23T07:52:39.137886Z"
+     "end_time": "2020-05-18T09:00:03.578860Z",
+     "start_time": "2020-05-18T08:59:19.783926Z"
     }
    },
    "outputs": [],
@@ -375,8 +375,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T12:43:50.526649Z",
-     "start_time": "2020-04-23T12:43:46.997609Z"
+     "end_time": "2020-05-18T09:06:34.952585Z",
+     "start_time": "2020-05-18T09:06:34.727630Z"
     }
    },
    "outputs": [],
@@ -397,8 +397,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-23T13:11:16.132046Z",
-     "start_time": "2020-04-23T12:58:56.417237Z"
+     "end_time": "2020-05-18T09:21:01.448457Z",
+     "start_time": "2020-05-18T09:14:53.804713Z"
     }
    },
    "outputs": [],
