Added POR output to exposure database

--- a/Waterfall/POR/POR.ipynb
+++ b/Waterfall/POR/POR.ipynb
@@ -19,8 +19,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T07:58:59.383140Z",
-     "start_time": "2020-05-18T07:58:48.672446Z"
+     "end_time": "2020-06-05T08:46:54.066823Z",
+     "start_time": "2020-06-05T08:46:49.364847Z"
     }
    },
    "outputs": [],
@@ -40,8 +40,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T07:59:01.593751Z",
-     "start_time": "2020-05-18T07:59:01.585316Z"
+     "end_time": "2020-06-05T08:46:54.080484Z",
+     "start_time": "2020-06-05T08:46:54.069493Z"
     }
    },
    "outputs": [],
@@ -58,8 +58,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T07:59:07.734348Z",
-     "start_time": "2020-05-18T07:59:02.623965Z"
+     "end_time": "2020-06-05T08:47:00.515847Z",
+     "start_time": "2020-06-05T08:46:54.084453Z"
     }
    },
    "outputs": [],
@@ -78,8 +78,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T07:59:12.276472Z",
-     "start_time": "2020-05-18T07:59:12.211952Z"
+     "end_time": "2020-06-05T08:47:02.815062Z",
+     "start_time": "2020-06-05T08:47:02.738274Z"
     }
    },
    "outputs": [],
@@ -92,8 +92,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T07:59:25.811694Z",
-     "start_time": "2020-05-18T07:59:25.807230Z"
+     "end_time": "2020-06-05T08:47:03.223659Z",
+     "start_time": "2020-06-05T08:47:03.219666Z"
     }
    },
    "outputs": [],
@@ -107,8 +107,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T07:59:26.439981Z",
-     "start_time": "2020-05-18T07:59:26.381950Z"
+     "end_time": "2020-06-05T08:47:03.897106Z",
+     "start_time": "2020-06-05T08:47:03.833276Z"
     }
    },
    "outputs": [],
@@ -122,8 +122,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T07:59:33.224981Z",
-     "start_time": "2020-05-18T07:59:32.657494Z"
+     "end_time": "2020-06-05T08:47:07.105088Z",
+     "start_time": "2020-06-05T08:47:06.544309Z"
     }
    },
    "outputs": [],
@@ -133,7 +133,7 @@
     "                     value_vars=Dates,\n",
     "                     value_name='Value',\n",
     "                     var_name='Attribute')\n",
-    "latest_por.iloc[:,10] = latest_por.iloc[:,10].apply(pd.to_datetime)"
+    "latest_por.iloc[:, 10] = latest_por.iloc[:, 10].apply(pd.to_datetime)"
    ]
   },
   {
@@ -141,8 +141,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T07:59:34.931243Z",
-     "start_time": "2020-05-18T07:59:34.903947Z"
+     "end_time": "2020-06-05T08:47:07.297216Z",
+     "start_time": "2020-06-05T08:47:07.270289Z"
     }
    },
    "outputs": [],
@@ -155,8 +155,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T07:59:39.512643Z",
-     "start_time": "2020-05-18T07:59:39.499250Z"
+     "end_time": "2020-06-05T08:47:10.071645Z",
+     "start_time": "2020-06-05T08:47:10.056688Z"
     }
    },
    "outputs": [],
@@ -169,8 +169,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T07:59:48.882895Z",
-     "start_time": "2020-05-18T07:59:48.877937Z"
+     "end_time": "2020-06-05T08:47:10.496262Z",
+     "start_time": "2020-06-05T08:47:10.491275Z"
     }
    },
    "outputs": [],
@@ -185,8 +185,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:00:25.654960Z",
-     "start_time": "2020-05-18T08:00:24.161508Z"
+     "end_time": "2020-06-05T08:47:18.458762Z",
+     "start_time": "2020-06-05T08:47:17.134267Z"
     }
    },
    "outputs": [],
@@ -208,8 +208,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:00:37.171867Z",
-     "start_time": "2020-05-18T08:00:37.168392Z"
+     "end_time": "2020-06-05T08:47:24.881182Z",
+     "start_time": "2020-06-05T08:47:24.877193Z"
     }
    },
    "outputs": [],
@@ -223,8 +223,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:00:48.558538Z",
-     "start_time": "2020-05-18T08:00:48.554073Z"
+     "end_time": "2020-06-05T08:47:25.102590Z",
+     "start_time": "2020-06-05T08:47:25.096605Z"
     }
    },
    "outputs": [],
@@ -238,8 +238,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:00:57.511758Z",
-     "start_time": "2020-05-18T08:00:52.727847Z"
+     "end_time": "2020-06-05T08:47:32.175161Z",
+     "start_time": "2020-06-05T08:47:25.296071Z"
     }
    },
    "outputs": [],
@@ -258,8 +258,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:01:24.713850Z",
-     "start_time": "2020-05-18T08:01:08.418295Z"
+     "end_time": "2020-06-05T08:47:54.979724Z",
+     "start_time": "2020-06-05T08:47:32.180147Z"
     }
    },
    "outputs": [],
@@ -287,8 +287,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:02:33.314813Z",
-     "start_time": "2020-05-18T08:02:33.050447Z"
+     "end_time": "2020-06-05T08:47:55.096417Z",
+     "start_time": "2020-06-05T08:47:54.984710Z"
     }
    },
    "outputs": [],
@@ -305,8 +305,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:02:36.511941Z",
-     "start_time": "2020-05-18T08:02:35.069081Z"
+     "end_time": "2020-06-05T08:47:56.311171Z",
+     "start_time": "2020-06-05T08:47:55.099404Z"
     }
    },
    "outputs": [],
@@ -322,8 +322,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:02:39.345485Z",
-     "start_time": "2020-05-18T08:02:39.340526Z"
+     "end_time": "2020-06-05T08:47:56.321138Z",
+     "start_time": "2020-06-05T08:47:56.314157Z"
     }
    },
    "outputs": [],
@@ -350,8 +350,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:02:41.973712Z",
-     "start_time": "2020-05-18T08:02:41.599184Z"
+     "end_time": "2020-06-05T08:47:56.900586Z",
+     "start_time": "2020-06-05T08:47:56.324128Z"
     }
    },
    "outputs": [],
@@ -365,8 +365,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:02:45.539187Z",
-     "start_time": "2020-05-18T08:02:44.944484Z"
+     "end_time": "2020-06-05T08:47:57.639610Z",
+     "start_time": "2020-06-05T08:47:56.905575Z"
     }
    },
    "outputs": [],
@@ -384,8 +384,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:02:52.171700Z",
-     "start_time": "2020-05-18T08:02:51.811604Z"
+     "end_time": "2020-06-05T08:47:58.143264Z",
+     "start_time": "2020-06-05T08:47:57.643600Z"
     }
    },
    "outputs": [],
@@ -417,8 +417,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:03:18.031547Z",
-     "start_time": "2020-05-18T08:03:18.027583Z"
+     "end_time": "2020-06-05T08:48:02.211558Z",
+     "start_time": "2020-06-05T08:48:02.207567Z"
     }
    },
    "outputs": [],
@@ -431,13 +431,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-18T08:03:41.017319Z",
-     "start_time": "2020-05-18T08:03:20.595612Z"
+     "end_time": "2020-06-05T08:49:00.729309Z",
+     "start_time": "2020-06-05T08:48:16.563866Z"
     }
    },
    "outputs": [],
    "source": [
-    "df_final_por.to_csv(output, index=False)"
+    "df_final_por.to_csv(output, index=False)\n",
+    "df_final_por.to_csv(\n",
+    "    r'C:\\Users\\KohMansf\\Documents\\STAMS\\Exposure Simulator\\Database\\POR\\2020_to_upload.csv', index=False)"
    ]
   },
   {
@@ -552,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
